open_shift/api-service-route.yaml
apiVersion: v1
kind: Service
metadata:
  name: sable-api
spec:
  selector:
    app: sable-api
  ports:
    - port: 8000
      targetPort: 8000
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sable-api
spec:
  to:
    kind: Service
    name: sable-api
  port:
    targetPort: 8000
  tls:
    termination: edge
